alterando previsao de lancamento

--- a/static_files/index.htm
+++ b/static_files/index.htm
@@ -39,7 +39,7 @@
     <div class="content-page" >
     <h2>Arquitetura e Design de Software</h2>
     <h3 style="text-align:right">- Uma visão sobre a plataforma Java</h3>
-	<h4 style="text-align:right; font-weight: normal"><i>Última fase de revisão, previsão de lançamento: Junho/11</i></h4>
+	<h4 style="text-align:right; font-weight: normal"><i>Última fase de revisão, lançamento em breve</i></h4>
 	
     <p>Este livro é o fruto do conhecimento de diversos consultores e instrutores da Caelum depois de mais de dois anos ministrando o treinamento de arquitetura e design Java, juntamente com muitas discussões apresentadas no <a href="http://www.guj.com.br/" target="_blank">GUJ.com.br</a> e de projetos desenvolvidos pela empresa.</p>
     
@@ -187,5 +187,3 @@ $.getScript('http://www.google-analytics.com/ga.js', function(){
 
 </body>
 </html>
-
-<!-- This document saved from  -->
