pra quem é o livro

--- a/static_files/index.html
+++ b/static_files/index.html
@@ -117,8 +117,7 @@
 	
 	<section id=publico>
 		<h1>Para quem é o livro</h1>
-		<p>Lorem pisum dolor lorem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor 
-		orem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor orem pisum dolor.</p>
+		<p>Para o desenvolvedor Java com mais de um ano de experiência ou que participou mais de um projeto Java. Se você começou a participar de projetos Java e  e quer saber por que uma série de decisões foram tomadas (ou impostas!) de determinada forma, este livro é para você.</p>
 		
 		<div id=professor>
 			Professor, quer usar o livro em sala de aula?
