URL venda saraiva

--- a/static_files/ie.html
+++ b/static_files/ie.html
@@ -16,7 +16,7 @@
 	
 	<div>
 		<h1>Sinto muito, o Site do Livro de Arquitetura Java nao funciona em navegadores antigos.</h1>
-		<p>Voce pode instalar um navegador mais atual ou ir direto comprar o livro na <a href="http://www.livrariasaraiva.com.br">Livraria Saraiva</a>.</p>
+		<p>Voce pode instalar um navegador mais atual ou ir direto comprar o livro na <a href="http://www.livrariasaraiva.com.br/produto/3705598/introducao-a-arquitetura-e-design-de-software-uma-visao-sobre-a-plataforma-java/">Livraria Saraiva</a>.</p>
 	</div>
 	
 	<img src="img/capa-livro.png" alt="Capa do livro">
