--- a/static_files/index.html
+++ b/static_files/index.html
@@ -32,7 +32,8 @@
 	<meta property="og:type" content="book">
 	<meta property="og:image" content="img/capa-livro-share.png">
 	<meta property="og:site_name" content="Livro Arquitetura Java">
-	<meta property="fb:admins" content="701388710,1550986373">
+	<meta property="fb:admins" content="701388710,1550986373"/>
+    <meta property="fb:app_id" content="140078819399376">
 	<meta property="og:description" content="Livro com a experiência dos instrutores da Caelum em diversos anos de projetos e no curso de Arquitetura Java.">
 	
 	<!-- Google+ -->
