--- a/static_files/index.html
+++ b/static_files/index.html
@@ -29,17 +29,18 @@
   
 	<!-- Facebook -->
 	<meta property="og:title" content="Introdução à Arquitetura e Design de Software - Uma visão sob a plataforma Java">
+	<meta property="og:url" content="http://www.arquiteturajava.com.br/">
 	<meta property="og:type" content="book">
-	<meta property="og:image" content="img/capa-livro-share.png">
+	<meta property="og:image" content="http://www.arquiteturajava.com.br/img/capa-livro-share.png">
 	<meta property="og:site_name" content="Livro Arquitetura Java">
 	<meta property="fb:admins" content="701388710,1550986373"/>
-    <meta property="fb:app_id" content="140078819399376">
+    <meta property="fb:app_id" content="323017204383940">
 	<meta property="og:description" content="Livro com a experiência dos instrutores da Caelum em diversos anos de projetos e no curso de Arquitetura Java.">
 	
 	<!-- Google+ -->
 	<meta itemprop="name" content="Introdução à Arquitetura e Design de Software - Uma visão sob a plataforma Java">
 	<meta itemprop="description" content="Livro com a experiência dos instrutores da Caelum em diversos anos de projetos e no curso de Arquitetura Java.">
-	<meta itemprop="image" content="img/capa-livro-share.png">
+	<meta itemprop="image" content="http://www.arquiteturajava.com.br/img/capa-livro-share.png">
 	
 	<!-- Mobile -->
 	<meta name="HandheldFriendly" content="True">
@@ -256,7 +257,7 @@
 	</section>
 
 	<div id=facebook>
-		<div class="fb-comments" data-href="http://www.facebook.com/arquiteturajava" data-num-posts="2" data-width="320"></div>
+		<div class="fb-comments" data-href="http://www.arquiteturajava.com.br/" data-num-posts="4" data-width="320"></div>
 	</div>
 
 	<footer>
@@ -345,7 +346,7 @@
 
 		// carrega facebook
 		if (!document.getElementById('facebook-jssdk')) {
-			loadAsync("http://connect.facebook.net/pt_BR/all.js#xfbml=1&appId=140078819399376").id = 'facebook-jssdk';			
+			loadAsync("http://connect.facebook.net/pt_BR/all.js#xfbml=1&appId=323017204383940").id = 'facebook-jssdk';			
 		}
 
 		// carrega google+
