--- a/static_files/index.html
+++ b/static_files/index.html
@@ -51,7 +51,7 @@
 	<!--[if lt IE 9]><script>OLD_IE=true;'abbr article aside audio canvas details figcaption figure footer header hgroup mark meter nav output progress section summary time video'.replace(/\w+/g,function(n){document.createElement(n)})</script><![endif]-->
     
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?1">
   
   	<!-- TODO favicon e apple-touch-icon -->
 </head>
@@ -150,6 +150,7 @@
 		<h1 class=container>Conteúdo</h1>
 		
 		<ol>
+			<li><a href="https://docs.google.com/document/d/1kZbOPMZ0p06hBAHQtdZxRevIyZNELja5IaoYDAJkYMA/edit"><strong>Errata</strong></a></li>
 			<li><a href="livro/agradecimentos.pdf">Agradecimentos</a></li>
 			<li><a href="#autores">Sobre os autores</a></li>
 			<li><a href="livro/prefacio.pdf">Prefácio, por Jim Webber</a></li>
