--- a/static_files/index.html
+++ b/static_files/index.html
@@ -247,7 +247,7 @@
 		<div class=autor>
 			<h2>Sérgio Lopes</h2>
 			<img src="http://www.gravatar.com/avatar/3244c236c487924b4309fdd53cbb8633?s=90" alt="Sérgio Lopes">
-			<p>É coordenador na unidade São Paulo da Caelum. Programa desde 2000 e desenvolve em Java desde 2003. É arquiteto Java certificado (SCEA5), mo- derador do GUJ e participante ativo da comunidade através de palestras, projetos, cursos e artigos.</p>
+			<p>É coordenador na unidade São Paulo da Caelum. Programa desde 2000 e desenvolve em Java desde 2003. É arquiteto Java certificado (SCEA5), moderador do GUJ e participante ativo da comunidade através de palestras, projetos, cursos e artigos.</p>
 		</div>
 		
 		<div class=autor>
