--- a/static_files/index.html
+++ b/static_files/index.html
@@ -324,7 +324,7 @@
 	}
 
 	// analytics
-	window._gaq = [['_setAccount','UA-270161-10'],['_trackPageview'],['_trackPageLoadTime']];
+	window._gaq = [['_setAccount','UA-270161-10'],['_trackPageview']];
 	loadAsync('http://www.google-analytics.com/ga.js');
 	
 	// track de downloads e links externos no analytics
