--- a/static_files/index.html
+++ b/static_files/index.html
@@ -76,11 +76,9 @@
     	<div class=compreja>
     		<h3>Compre já nas melhores livrarias:</h3>
 	    	
-	    	<a class="nicebutton saraiva" href="http://www.livrariasaraiva.com.br/produto/3705598/introducao-a-arquitetura-e-design-de-software-uma-visao-sobre-a-plataforma-java/">Saraiva</a>
+	    	<a class="nicebutton" href="http://compare.buscape.com.br/introducao-a-arquitetura-e-design-de-software-uma-visao-sobre-a-plataforma-java-sergio-lopes-outros-paulo-silveira-guilherme-silveira-8535250298.html">Livro impresso</a>
 
-	    	<a class="nicebutton siciliano" href="http://www.siciliano.com.br/produto/produto.dll/detalhe?pro_id=3705598">Siciliano</a>
-
-	    	<a class="nicebutton elsevier" href="http://www.elsevier.com.br/site/produtos/Detalhe-produto.aspx?tid=84441&seg=16&isbn=9788535250299&cat=264&tit=ARQUITETURA%20E%20DESIGN%20DE%20SOFTWARE">Elsevier</a>
+	    	<a class="nicebutton" href="http://www.livrariasaraiva.com.br/produto/3872654">Ebook</a>
 
 	    	<span>ou baixe alguns tópicos abertos abaixo</span>
     	</div>
@@ -136,11 +134,9 @@
     	<div class=compreja>
     		<h3>Compre já nas melhores livrarias:</h3>
 	    	
-	    	<a class="nicebutton saraiva" href="http://www.livrariasaraiva.com.br/produto/3705598/introducao-a-arquitetura-e-design-de-software-uma-visao-sobre-a-plataforma-java/">Saraiva</a>
+	    	<a class="nicebutton" href="http://compare.buscape.com.br/introducao-a-arquitetura-e-design-de-software-uma-visao-sobre-a-plataforma-java-sergio-lopes-outros-paulo-silveira-guilherme-silveira-8535250298.html">Livro impresso</a>
 
-	    	<a class="nicebutton siciliano" href="http://www.siciliano.com.br/produto/produto.dll/detalhe?pro_id=3705598">Siciliano</a>
-
-	    	<a class="nicebutton elsevier" href="http://www.elsevier.com.br/site/produtos/Detalhe-produto.aspx?tid=84441&seg=16&isbn=9788535250299&cat=264&tit=ARQUITETURA%20E%20DESIGN%20DE%20SOFTWARE">Elsevier</a>
+	    	<a class="nicebutton" href="http://www.livrariasaraiva.com.br/produto/3872654">Ebook</a>
 
 	    	<span>ou baixe alguns tópicos abertos abaixo</span>
     	</div>
