--- a/static_files/ie.html
+++ b/static_files/ie.html
@@ -1,43 +1,1 @@
-<html>
-<head>
-    <meta charset="utf-8">
-
-    <title>Livro Arquitetura e Design Java</title>
-    <style>
-		html { 	background: url(img/bg.gif) repeat; }
-		body { text-align: center; }
-		div { margin: 40px; width: 50%; border: 12px solid yellow; background: lightyellow; padding: 20px;}
-		h1 { color: #555; font-size: 130%; } 
-		p { font-size: 110%; color: #222; }  
-		img { margin: 0 auto; }
-    </style>
-</head>
-<body>
-	
-	<div>
-		<h1>Sinto muito, o Site do Livro de Arquitetura Java nao funciona em navegadores antigos.</h1>
-		<p>Voce pode instalar um navegador mais atual ou ir direto comprar o livro na <a href="http://www.livrariasaraiva.com.br/produto/3705598/introducao-a-arquitetura-e-design-de-software-uma-visao-sobre-a-plataforma-java/">Livraria Saraiva</a>.</p>
-	</div>
-	
-	<img src="img/capa-livro.png" alt="Capa do livro">
-	
-	<script>
-	// base
-	function loadAsync(url) {
-		var e = document.createElement('script'); 
-		e.type = 'text/javascript'; 
-		e.async = true;
-		e.src = url;
-
-		var s = document.getElementsByTagName('script')[0]; 
-		s.parentNode.insertBefore(e, s);
-		return s;
-	}
-
-	// analytics
-	window._gaq = [['_setAccount','UA-270161-10'],['_trackPageview']];
-	loadAsync('http://www.google-analytics.com/ga.js');
-	</script>
-
-</body>
-</html>
+<html> <head> <meta charset="utf-8"> <title>Livro Arquitetura e Design Java</title> <style>html{background:url(img/ie-bg.png) no-repeat center 100px;padding:0}body{text-align:center;padding:0;margin:0}div{margin:0;width:100%;background:#ff6;padding:5px 0}h1{color:#555;font-size:130%}p{font-size:110%;color:#222}img{margin:0 auto}</style> </head> <body> <div> <h1>Sinto muito, o Site do Livro de Arquitetura Java nao funciona em navegadores antigos.</h1> <p>Instale um navegador mais atual ou va direto <a href="http://compare.buscape.com.br/prod_unico?idu=1853525029&ordem=nota">comprar o livro</a>.</p> </div> <script>function loadAsync(a){var c=document.createElement("script");c.type="text/javascript";c.async=true;c.src=a;var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(c,b);return b}window._gaq=[["_setAccount","UA-270161-10"],["_trackPageview"]];loadAsync("http://www.google-analytics.com/ga.js");</script> </body> </html>
