digital vira link e nao botao

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 	<!--[if IE 8]><script>OLD_IE=true;'abbr article aside audio canvas details figcaption figure footer header hgroup mark meter nav output progress section summary time video'.replace(/\w+/g,function(n){document.createElement(n)})</script><![endif]-->
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css" class="embed">
+    <link rel="stylesheet" href="css/style.css?2" class="embed">
  
  	<!-- Aplica CSS sem media queries no IE8 -->
 	<!--[if IE 8]><link rel="stylesheet" href="css/ie8.css"><![endif]-->
@@ -70,10 +70,7 @@
 	    	</div>
 	    	
 	    	<div class=compreja>
-		    	<a class="nicebutton" href="http://compare.buscape.com.br/prod_unico?idu=1853525029&ordem=nota">Comprar impresso</a>
-
-		    	<a class="nicebutton" href="http://www.livrariasaraiva.com.br/produto/3872654">Comprar ebook</a>
-
+		    	<a class="nicebutton" href="http://compare.buscape.com.br/prod_unico?idu=1853525029&ordem=nota">Comprar o livro</a>
 		    	<span>ou baixe alguns tópicos abertos abaixo</span>
 	    	</div>
     	</div>
@@ -196,9 +193,8 @@
 		</ol>
 
     	<div class=compreja>
-	    	<a class="nicebutton" href="http://compare.buscape.com.br/prod_unico?idu=1853525029&ordem=nota">Comprar impresso</a>
-
-	    	<a class="nicebutton" href="http://www.livrariasaraiva.com.br/produto/3872654">Comprar ebook</a>
+	    	<a class="nicebutton" href="http://compare.buscape.com.br/prod_unico?idu=1853525029&ordem=nota">Comprar o livro</a>
+	    	<p>O livro também está disponível em <a href="http://www.livrariasaraiva.com.br/produto/3872654">versão digital</a>, mas infelizmente apenas em PDF com DRM da Saraiva por desinteresse e incapacidade da editora.</p>
     	</div>
 	</section>
 
