--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,17 @@
 <!--[if lte IE 9]><body class="ie"><![endif]-->
 <!--[if !IE]><!--><body><!--<![endif]-->
 
+	<div class="cc-barra">
+		<div class="cc-container">
+			<a href="http://casadocodigo.com.br" class="cc-logo">
+				<img src="img/casa-do-codigo.png" alt="Editora Casa do Código">
+			</a>
+			<h1>Procurando mais livros de programação? <br>Conheça a 
+				<a href="http://casadocodigo.com.br">editora Casa do Código</a>.
+			</h1>
+		</div>
+	</div>
+
     <header>
     	<div class="container">
 	    	<p id=chamada>Confuso com tantos design patterns, padrões, frameworks e boas práticas?</p>
